# cmd/server/main.go
@@ -195,6 +195,7 @@ func buildRouter(opts routerOptions) http.Handler {
 		r.Get("/game/{slug}/position/{turn}", getPositionHandler)
 		r.Get("/game/{slug}/{turn}", getTurnHandler)
 		r.Post("/analyze/game/{slug}", postAnalyzeHandler)
+		r.Get("/analyze/openings", getOpeningsHandler)
 
 		r.Group(func(r chi.Router) {
 			r.Use(authMiddleware)
